Added a stylesheet as per the pre-work course requirements. Add additional styling. Updated the HTML doc with notes on CSS.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -26,13 +27,16 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>Link the style sheet to the HTML document by adding <code>&lt;link rel="stylesheet" href="./assets/style.css"&gt;</code></li>
+          <li>Do Not Repeat code</li>
+          <li><strong>Multiple selectors:</strong> Separate selectors with commas and new lines to apply the same styling</li>
+          <li><strong>Descendant selectors:</strong> Select nested elements using the descendant combinator. Separate selectors with a space and read from right to left, for example all list items within a containing element with a class of "main-list" would be written as, <code>.main-list li</code></li>
         </ul>
       </section>
    
       <section class="card" id="git-section">
         <h2>Git</h2>
-        <ol>
+        <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           <li>git add -A: adds the code to the current working branch</li>
@@ -40,8 +44,9 @@
           <li>git pull origin main: Double check if the local branch is in sync with the main branch</li>
           <li>git push origin feature/starter-code: push changes to the remote branch</li>
           <li>Go to Github to review changes and create a pull request to merge the branch with the main branch.</li>
-          <li>Github is tricky, be patient!</li>         
-        </ol>   
+          <li>Github is tricky, be patient!</li>
+          <li>Investigate Github Copilot</li>             
+        </ul>   
       </section>
    
       <section class="card" id="javascript-section">
