Updated the JavaScript file by adding functions containing conditional logic to list the prework topics to the console and to choos a topic at random to study using the Math.random

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>git status: checks what branch we are currently on</li>
+          <li>Check what branch you are currently on by running <code>git status</code></li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           <li>git add -A: adds the code to the current working branch</li>
           <li>git commit -m "clear message about the update": creates a commit that captures a snapshot of the currently staged changes</li>
@@ -53,7 +53,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a container that allows us to store data in our code.</li>
+          <li>Create a function by using the <code>function</code> keyword and give the function a unique name.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Print to the console using <code>console.log();</code></li>
+          <li>Use <code>if</code> statements to introduce conditional logic into application.</li>
         </ul>
       </section>
 
