--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul>
           <li>Check what branch you are currently on by running <code>git status</code></li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git add -A: This command stages all changes in the working directory for the next commit</li>
+          <li>git add -A: This command stages all changes in the working directory for the next commit.</li>
           <li>git commit -m "clear message about the update": creates a commit that captures a snapshot of the currently staged changes</li>
           <li>git pull origin main: Double check if the local branch is in sync with the main branch</li>
           <li>git push origin feature/starter-code: push changes to the remote branch</li>
